src/test/resources/purescript_examples/passing/ImportHiding.purs.psi
Purescript File
  PSASTWrapperElement(Program)
    PSASTWrapperElement(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PSASTWrapperElement(Qualified)
        PSASTWrapperElement(ModuleName)
          PsiElement(proper name)('Main')
      PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PSASTWrapperElement(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSASTWrapperElement(Qualified)
          PSASTWrapperElement(ModuleName)
            PsiElement(proper name)('Control')
            PsiElement(.)('.')
          PSASTWrapperElement(ModuleName)
            PsiElement(proper name)('Monad')
            PsiElement(.)('.')
          PSASTWrapperElement(ModuleName)
            PsiElement(proper name)('Eff')
            PsiElement(.)('.')
          PSASTWrapperElement(ModuleName)
            PsiElement(proper name)('Console')
        PsiElement(whitespace)('\n')
      PSASTWrapperElement(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSASTWrapperElement(Qualified)
          PSASTWrapperElement(ModuleName)
            PsiElement(proper name)('Prelude')
        PsiElement(whitespace)(' ')
        PsiElement(hiding)('hiding')
        PsiElement(whitespace)(' ')
        PsiElement(()('(')
        PsiElement(whitespace)('\n  ')
        PSASTWrapperElement(PositionedDeclarationRef)
          PSASTWrapperElement(ValueRef)
            PsiElement(identifier)('show')
        PsiElement(,)(',')
        PsiElement(whitespace)(' -- a value\n  ')
        PsiErrorElement:Expecting PositionedDeclarationRef
          PsiElement(class)('class')
          PsiElement(whitespace)(' ')
          PsiElement(proper name)('Show')
          PsiElement(,)(',')
          PsiElement(whitespace)(' -- a type class\n  ')
          PsiElement(proper name)('Unit')
          PsiElement(()('(')
          PsiElement(..)('..')
        PsiElement())(')')
        PsiElement(whitespace)('  -- a constructor\n  ')
  PsiErrorElement:Unexpected ). Expecting Module
    PsiElement())(')')
    PsiElement(whitespace)('\n\n')
    PsiElement(identifier)('show')
    PsiElement(whitespace)(' ')
    PsiElement(=)('=')
    PsiElement(whitespace)(' ')
    PsiElement(float)('1.0')
    PsiElement(whitespace)('\n\n')
    PsiElement(class)('class')
    PsiElement(whitespace)(' ')
    PsiElement(proper name)('Show')
    PsiElement(whitespace)(' ')
    PsiElement(identifier)('a')
    PsiElement(whitespace)(' ')
    PsiElement(where)('where')
    PsiElement(whitespace)('\n  ')
    PsiElement(identifier)('noshow')
    PsiElement(whitespace)(' ')
    PsiElement(::)('::')
    PsiElement(whitespace)(' ')
    PsiElement(identifier)('a')
    PsiElement(whitespace)(' ')
    PsiElement(->)('->')
    PsiElement(whitespace)(' ')
    PsiElement(identifier)('a')
    PsiElement(whitespace)('\n\n')
    PsiElement(data)('data')
    PsiElement(whitespace)(' ')
    PsiElement(proper name)('Unit')
    PsiElement(whitespace)(' ')
    PsiElement(=)('=')
    PsiElement(whitespace)(' ')
    PsiElement(proper name)('X')
    PsiElement(whitespace)(' ')
    PsiElement(|)('|')
    PsiElement(whitespace)(' ')
    PsiElement(proper name)('Y')
    PsiElement(whitespace)('\n\n')
    PsiElement(identifier)('main')
    PsiElement(whitespace)(' ')
    PsiElement(=)('=')
    PsiElement(whitespace)(' ')
    PsiElement(do)('do')
    PsiElement(whitespace)('\n  ')
    PsiElement(identifier)('logShow')
    PsiElement(whitespace)(' ')
    PsiElement(identifier)('show')
    PsiElement(whitespace)('\n  ')
    PsiElement(identifier)('log')
    PsiElement(whitespace)(' ')
    PsiElement(string)('"Done"')
    PsiElement(whitespace)('\n')
